fix carousel cards overflowing because of page margin

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@ body {
 
 #root {
   max-width: 100vw;
-  padding: 0.5rem;
+  padding: var(--page-padding);
   padding-bottom: 1.5rem;
   height: 100%;
 }
